Native image build - success