@@ -1,5 +1,3 @@
-import sbt.dsl.LinterLevel.Ignore
-
 val scala3Version = "3.2.1"
 val graalvmVersion = "22.3.0"
 val pulsarVersion = "2.10.2"
@@ -9,19 +7,37 @@ val zioConfigVersion = "3.0.2"
 maintainer := "kiryl_valkovich@teal.tools"
 
 lazy val root = project
-    .enablePlugins(JavaAppPackaging)
-    .enablePlugins(UniversalPlugin)
+    .enablePlugins(GraalVMNativeImagePlugin)
     .enablePlugins(GitVersioning)
     .enablePlugins(BuildInfoPlugin)
+    .enablePlugins(NativeImagePlugin)
     .in(file("."))
     .settings(
-      name := "Pulsar UI",
+      name := "pulsar-ui",
       scalaVersion := scala3Version,
       Compile / mainClass := Some("main.Main"),
+      nativeImageInstalled := true,
+      nativeImageOptions ++= Seq(
+        s"-H:ReflectionConfigurationFiles=${target.value / "native-image-configs" / "reflect-config.json"}",
+        s"-H:ConfigurationFileDirectories=${target.value / "native-image-configs"}",
+        "-H:Log=registerResource:5",
+        "-H:IncludeResources=ui/.*",
+        "-H:+JNI",
+        "--language:js",
+        "-H:+ReportExceptionStackTraces",
+        "-H:-CheckToolchain",
+        "--enable-preview",
+        "--initialize-at-build-time=ch.qos.logback",
+        "--initialize-at-build-time=org.snakeyaml",
+        "--initialize-at-run-time=io.netty",
+        "--trace-object-instantiation=ch.qos.logback.core.AsyncAppenderBase$Worker",
+        "--trace-class-initialization=ch.qos.logback.classic.Logger"
+      ),
       buildInfoPackage := "buildinfo",
       buildInfoOptions += BuildInfoOption.BuildTime,
       buildInfoOptions += BuildInfoOption.ToMap,
       git.useGitDescribe := true,
+//      Compile / packageDoc / mappings := Seq(), // https://github.com/sbt/sbt-native-packager/issues/651
       libraryDependencies ++= Seq(
         // Testing
         "org.scalameta" %% "munit" % "0.7.29" % Test,
@@ -31,7 +47,7 @@ lazy val root = project
         // Pulsar
         "org.apache.pulsar" % "pulsar-client-original" % pulsarVersion,
         "org.apache.pulsar" % "pulsar-client-admin-original" % pulsarVersion,
-        "io.netty" % "netty-all" % "4.1.85.Final", // Needed by pulsar-client-original
+        "io.netty" % "netty-all" % "4.1.82.Final", // Needed by pulsar-client-original
         // GraalVM
         "org.graalvm.truffle" % "truffle-api" % graalvmVersion,
         "org.graalvm.js" % "js" % graalvmVersion,
